--- a/idol_gallery/idol_detail/ranko.html
+++ b/idol_gallery/idol_detail/ranko.html
@@ -3186,20 +3186,20 @@ kg
                         "comments_love_max": "休息は束の間…されど､私の魔力は潤った! (いきましょう､OOﾌﾟﾛﾃﾞｭｰｻｰ! この後の撮影も､頑張っちゃいますっ!)"
                     },
                     "voice": {
-                        "comment": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2449601\/59c20fd9fd6492030425a76b907de5ed.mp4",
-                        "comments_my_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2449601\/9373a29e0b2dda8c377bbd88f222d25f.mp4",
-                        "comments_my_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2449601\/223c340db9f949fac89f416f0c199513.mp4",
-                        "comments_my_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2449601\/40f49785ec34d9023864a548db14b99c.mp4",
-                        "comments_my_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2449601\/232eb5b8820df7b078a20decc75f4608.mp4",
-                        "comments_my_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2449601\/abb431bb2e65bd095889be22018390fa.mp4",
-                        "comments_work_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2449601\/b541ba44c55a1ffadb5820bc9409513d.mp4",
-                        "comments_work_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2449601\/6bf4b838b04bd75e5372fb1d8b2a7b15.mp4",
-                        "comments_work_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2449601\/729495bc8286ebb38475ab5f412936fc.mp4",
-                        "comments_work_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2449601\/482de062c44698283cb99a57e3cfe966.mp4",
-                        "comments_work_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2449601\/b4bb36687c525464af8c671f1d082b61.mp4",
-                        "comments_work_love_up": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2449601\/2e7ba2f5a41705d714b00cecb0c5c474.mp4",
-                        "comments_live": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2449601\/922124965abcde274db8eb6a75f032d2.mp4",
-                        "comments_love_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2449601\/cc6b52615eb4978ddd88847720d455c1.mp4"
+                        "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2449601/idolcomment.mp3",
+                        "comments_my_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2449601/my_1.mp3",
+                        "comments_my_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2449601/my_2.mp3",
+                        "comments_my_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2449601/my_3.mp3",
+                        "comments_my_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2449601/my_4.mp3",
+                        "comments_my_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2449601/my_max.mp3",
+                        "comments_work_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2449601/work_1.mp3",
+                        "comments_work_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2449601/work_2.mp3",
+                        "comments_work_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2449601/work_3.mp3",
+                        "comments_work_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2449601/work_4.mp3",
+                        "comments_work_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2449601/work_max.mp3",
+                        "comments_work_love_up": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2449601/work_love_up.mp3",
+                        "comments_live": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2449601/live.mp3",
+                        "comments_love_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2449601/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
@@ -3265,20 +3265,20 @@ kg
                         "comments_love_max": "我が友の瞳が､次なる神話の創造を果たした! …いつもｽﾃｷな私を見つけてくれて､ありがとう…OOﾌﾟﾛﾃﾞｭｰｻｰ♪"
                     },
                     "voice": {
-                        "comment": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2549602\/0a8c39f08038ab5917a08f2d1cc828ab.mp4",
-                        "comments_my_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2549602\/495b8f76576aa0104d8048ffb428ef96.mp4",
-                        "comments_my_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2549602\/66f7e08a7784500a2e0d14dd94a1bcc4.mp4",
-                        "comments_my_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2549602\/85eace891968314e6420d01d0a0cb20d.mp4",
-                        "comments_my_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2549602\/88eb7e38ab0a6f81ea25195c0005fc91.mp4",
-                        "comments_my_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2549602\/a2081069f22f723fba6c3471389c1f74.mp4",
-                        "comments_work_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2549602\/62c90140b46d73b61a3ca0384cd921fa.mp4",
-                        "comments_work_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2549602\/009e74fe62fb787e8cce2e09c6e3ef73.mp4",
-                        "comments_work_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2549602\/47670abf97e567b79756b4e1b09c2577.mp4",
-                        "comments_work_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2549602\/aee395a668115b215e8e8af14cf379a5.mp4",
-                        "comments_work_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2549602\/a24dfc7cd9d8b546ebc24c0a44c96615.mp4",
-                        "comments_work_love_up": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2549602\/ea65409358ea8e89aa4cd98d1df0e53a.mp4",
-                        "comments_live": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2549602\/c79b609a75556be75792d11523f081cd.mp4",
-                        "comments_love_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2549602\/f225db19d504cc18cf08439913a93b97.mp4"
+                        "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2549602/idolcomment.mp3",
+                        "comments_my_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2549602/my_1.mp3",
+                        "comments_my_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2549602/my_2.mp3",
+                        "comments_my_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2549602/my_3.mp3",
+                        "comments_my_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2549602/my_4.mp3",
+                        "comments_my_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2549602/my_max.mp3",
+                        "comments_work_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2549602/work_1.mp3",
+                        "comments_work_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2549602/work_2.mp3",
+                        "comments_work_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2549602/work_3.mp3",
+                        "comments_work_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2549602/work_4.mp3",
+                        "comments_work_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2549602/work_max.mp3",
+                        "comments_work_love_up": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2549602/work_love_up.mp3",
+                        "comments_live": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2549602/live.mp3",
+                        "comments_love_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2549602/love_max.mp3"
                     },
                     "event": {
                         "1420": {
@@ -3350,20 +3350,20 @@ kg
                         "comments_love_max": "…できた! 時は満ち､術式は完成したわ｡大いなる福音を我が手に! (OOﾌﾟﾛﾃﾞｭｰｻｰ､素敵な衣装…お願い～♪)"
                     },
                     "voice": {
-                        "comment": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2453401\/2276e658d9672104315d5c26408c150c.mp4",
-                        "comments_my_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2453401\/6e66d9de03710c2275e6e9771dfa9572.mp4",
-                        "comments_my_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2453401\/663c57deed46067415ba636bc3294a3f.mp4",
-                        "comments_my_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2453401\/de50194530887ec3d16dd495fd4ce871.mp4",
-                        "comments_my_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2453401\/857a6ac96db60ff58b57f126237df4e1.mp4",
-                        "comments_my_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2453401\/5aaa351b27995cb92698a7699f751966.mp4",
-                        "comments_work_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2453401\/716f430ad804ad0cd8e77f2fc616e750.mp4",
-                        "comments_work_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2453401\/082786252c59117cda25af8d16de529b.mp4",
-                        "comments_work_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2453401\/4dbb4f4b0632d9e17e817acbf2d92007.mp4",
-                        "comments_work_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2453401\/0cd2cff40ba20b541d6b1d9623f502a5.mp4",
-                        "comments_work_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2453401\/87a145b9556e8b357f7686cb5a84f506.mp4",
-                        "comments_work_love_up": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2453401\/92f717f5d889ff1095873449f44c4cbd.mp4",
-                        "comments_live": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2453401\/bd3f5e7543ac85df3bf25bb50c40d769.mp4",
-                        "comments_love_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2453401\/050455bf14573653e2b89cda229b1237.mp4"
+                        "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2453401/idolcomment.mp3",
+                        "comments_my_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2453401/my_1.mp3",
+                        "comments_my_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2453401/my_2.mp3",
+                        "comments_my_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2453401/my_3.mp3",
+                        "comments_my_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2453401/my_4.mp3",
+                        "comments_my_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2453401/my_max.mp3",
+                        "comments_work_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2453401/work_1.mp3",
+                        "comments_work_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2453401/work_2.mp3",
+                        "comments_work_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2453401/work_3.mp3",
+                        "comments_work_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2453401/work_4.mp3",
+                        "comments_work_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2453401/work_max.mp3",
+                        "comments_work_love_up": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2453401/work_love_up.mp3",
+                        "comments_live": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2453401/live.mp3",
+                        "comments_love_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2453401/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
@@ -3429,20 +3429,20 @@ kg
                         "comments_love_max": "薔薇の魔力に魅入られたのなら最後…茨は絡みついて､離さないわ｡我が友OOも､薔薇が咲く楽園へ､共に…!"
                     },
                     "voice": {
-                        "comment": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2553402\/fb8f358542e29889cdbf43577050bb0d.mp4",
-                        "comments_my_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2553402\/698efab17ca6c099191dabe685c35fd3.mp4",
-                        "comments_my_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2553402\/51675f8b1e68f056b48f89a43d30889d.mp4",
-                        "comments_my_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2553402\/7ff6a09bf4f4b505c49ce7dd0c28fb02.mp4",
-                        "comments_my_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2553402\/fd788e5f6e3f730894f3e7c6fd4013b3.mp4",
-                        "comments_my_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2553402\/17f9d6926ca1ffc25b5137cc1d7c6f5b.mp4",
-                        "comments_work_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2553402\/8b9385745c907f2f34beca9c8306b100.mp4",
-                        "comments_work_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2553402\/8f5418ecd1dfe0159addeb2f83be89b2.mp4",
-                        "comments_work_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2553402\/637f9c2702aa3e33ca70f8149733ac4d.mp4",
-                        "comments_work_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2553402\/20b13f36230c92e3366e0cb037aa23c1.mp4",
-                        "comments_work_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2553402\/6fa9d0963d219b9b0009c62202d36080.mp4",
-                        "comments_work_love_up": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2553402\/9c98fb9dbf53b968ea7069d1b370aa95.mp4",
-                        "comments_live": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2553402\/59c2f8f9f70d816435eb0d859f7ed718.mp4",
-                        "comments_love_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2553402\/d7e62caacadc9fc0b83df6ad9973fb16.mp4"
+                        "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2553402/idolcomment.mp3",
+                        "comments_my_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2553402/my_1.mp3",
+                        "comments_my_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2553402/my_2.mp3",
+                        "comments_my_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2553402/my_3.mp3",
+                        "comments_my_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2553402/my_4.mp3",
+                        "comments_my_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2553402/my_max.mp3",
+                        "comments_work_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2553402/work_1.mp3",
+                        "comments_work_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2553402/work_2.mp3",
+                        "comments_work_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2553402/work_3.mp3",
+                        "comments_work_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2553402/work_4.mp3",
+                        "comments_work_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2553402/work_max.mp3",
+                        "comments_work_love_up": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2553402/work_love_up.mp3",
+                        "comments_live": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2553402/live.mp3",
+                        "comments_love_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2553402/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
